nv50/ir: set position before i instead of i->next in NV50LoweringPreSSA::visit

Fixes rendering glitches in Psychonauts such as Raz's eyes flickering white.
Fixes https://bugs.freedesktop.org/show_bug.cgi?id=51962.